# aemu

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel
base/: Android.bp  BUILD.bazel  CMakeLists.txt  Debug.cpp  FileMatcher_unittest.cpp  FileUtils.cpp  GraphicsObjectCounter.cpp  HybridEntityManager_unittest.cpp  NoDestructor_unittest.cpp  RingStreambuf.cpp  RingStreambuf_perf.cpp  RingStreambuf_unittest.cpp  SharedLibrary.cpp  Stream.cpp  StringUtils.cpp  System.cpp  msvc.cpp  ring_buffer.cpp  system-native-mac.mm
base/include/aemu/base/: AlignedBuf.h  Allocator.h  BumpPool.h  EintrWrapper.h  FunctionView.h  GraphicsObjectCounter.h  LayoutResolver.h  MruCache.h  Result.h  address_space.h  msvc.h  ring_buffer.h
base/include/aemu/base/async/: AsyncSocket.h  AsyncSocketAdapter.h  AsyncWriter.h  DefaultLooper.h  Looper.h  RecurrentTask.h
base/include/aemu/base/containers/: HybridEntityManager.h  SmallVector.h
base/include/aemu/base/files/: ScopedFd.h  Stream.h  TarStream.h
base/include/aemu/base/logging/: CLog.h  Log.h  LogFormatter.h  LogSeverity.h  LogTags.h
base/include/aemu/base/memory/: LazyInstance.h  NoDestructor.h
base/include/aemu/base/misc/: IpcPipe.h
base/include/aemu/base/process/: Command.h  Process.h
base/include/aemu/base/synchronization/: Lock.h
base/include/aemu/base/system/: System.h
base/include/aemu/base/testing/: FileMatchers.h  ProtobufMatchers.h
base/include/aemu/base/utils/: status_macros.h  status_matcher_macros.h
host-common/: BUILD.bazel  CMakeLists.txt  GfxstreamFatalErrorAbsl.cpp  GraphicsAgentFactory.cpp  address_space_device.cpp  address_space_graphics.cpp  address_space_host_memory_allocator.cpp  address_space_shared_slots_host_memory_allocator.cpp  empty-crash-handler.cpp  feature_control.cpp  logging.cpp  logging_absl.cpp  logging_absl_unittest.cpp  misc.cpp
host-common/include/host-common/: AndroidAsyncMessagePipe.h  FeatureControl.h  FeatureControlDefGuest.h  FeatureControlDefHost.h  GraphicsAgentFactory.h  HostmemIdMapping.h  MultiDisplay.h  address_space_device.h  address_space_device.hpp  address_space_graphics.h  address_space_host_memory_allocator.h  feature_control.h  logging.h  misc.h  vm_operations.h  window_agent.h
host-common/testing/: HostAddressSpace.cpp  MockGraphicsAgentFactory.cpp  MockGraphicsAgentFactory.h
snapshot/: BUILD.bazel  CMakeLists.txt  TextureLoader.cpp  TextureSaver.cpp
snapshot/include/snapshot/: common.h
windows/: BUILD  CMakeLists.txt
windows/includes/: fcntl.h  getopt.h  limits.h  stdlib.h  strings.h  time.h  unistd.h
windows/includes/bits/: socket.h
windows/includes/dirent/: dirent.h
windows/includes/sys/: cdefs.h  stat.h  time.h  types.h
windows/src/: msvc-posix.c  pread.cpp
windows/tests/: CMakeLists.txt  dirent_test.cpp
windows/tests/compiler/: longjump_test.c
windows/tests/yasm/: hello_world.asm
