module(
    name = "aemu",
    version = "0.0.1",
)

bazel_dep(name = "abseil-cpp", version = "20250127.0", repo_name = "com_google_absl")
bazel_dep(name = "google_benchmark", version = "1.9.1", repo_name = "com_github_google_benchmark")
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.0.14")
bazel_dep(name = "rules_license", version = "1.0.0")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "lz4",
    commit = "ffd13f12b8dc267d324dec05fa21f5a3e324a69f",
    remote = "https://android.googlesource.com/platform/external/lz4",
)
